--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
-.pio
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
+# PlatformIO
+.pio/
+.pioenvs/
+.piolibdeps/
+.vscode/
+
+# Python / ML
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.env
+.ipynb_checkpoints/
+
+# OS Specific
+.DS_Store
+Thumbs.db
+.spotlight-V100
+.Trashes
+ehthumbs.db
+
+# Documentation / Backups (Optional - uncomment if you want to exclude these)
+# *.backup
+# *.txt
